# vizmat

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html  justfile
.github/workflows/: ci.yml  deploy.yml
assets/: c6h6.xyz  index-B4eNslWE.js  index-BfXgjTHM.js  index-BqxzQ_Z8.js  index-BzWcAbPl.js  index-C-fS7w7u.js  index-CBT32Qet.js  index-CEX6RlNO.js  index-CTrlj8xd.js  index-CVxNdKP6.js  index-Cxk4ZNU6.js  index-D9PgFuJd.js  index-DPpa0QAJ.js  index-DbAIR5Ak.js  index-DeHtBoX9.js  index-DqpWowmw.js  index-DxZ4YCNY.js  index-N6TDiAF5.css  index-UKwtC_F_.css  index-lPAIPdJB.js  index-pbri8Rhd.js  mobile-gesture-BB759D3M.js  sio2-alpha.xyz
src/: lib.rs  ui.rs
vizmat-app/: Cargo.toml  index.html  index.js  mobile-gesture.js  style.css
vizmat-app/src/: main.rs
vizmat-core/: Cargo.toml
vizmat-core/src/: client.rs  constants.rs  io.rs  lib.rs  parse.rs  structure.rs  ui.rs
vizmat-core/src/formats/: mod.rs  pdb.rs  sdf.rs  xyz.rs
vizmat-core/src/ui/: picker.rs
wasm/: index.html  vite.config.js
