[package]
name = "vizmat-core"
version.workspace = true
readme.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
bevy = { version = "0.16", features = ["default"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
gloo = "0.11.0"
web-sys = { version = "0.3", features = ["DataTransfer", "DataTransferItem", "DataTransferItemList", "DragEvent"] }
tracing = "0.1.44"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.32.0", features = ["async-std", "async-std-runtime"] }
futures-util = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.16" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent"] }
js-sys = "0.3"

[features]
webgpu = ["bevy/webgpu"]
webgl2 = ["bevy/webgl2"]
dev-track-location = ["bevy/track_location"]

[lib]
# need both, cdylib for wasm, rlib for main.rs
crate-type = ["cdylib", "rlib"]

